demo/traefik-v1/traefik/dashboard-ingress/02_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: traefik
    release: traefik
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik-dashboard
  namespace: kube-system
spec:
  ports:
  - name: dashboard
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: traefik
    release: traefik
  type: LoadBalancer
